chore: fix minishelf spacing

--- a/packages/webui/src/client/styles/shelf/dashboard-rundownView.scss
+++ b/packages/webui/src/client/styles/shelf/dashboard-rundownView.scss
@@ -1,5 +1,5 @@
 .segment-timeline + .rundown-view-shelf {
-	padding: 13px 0em 0 0;
+	padding: 12px 0 0 0;
 }
 
 @import './rundownViewShelfAdlibSizeToggle';
